--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div>
             <table id="times">
               <tr>
-                <td>Leave at</td>
+                <td>Leave on Monday at</td>
                 <td>A to B</td>
                 <td>B to A</td>
               </tr>
@@ -56,6 +56,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="commute-time.js"></script>
     <script async defer 
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtDFC3VLvbxSFJ-8tAWIFhVipSdH81Eio&callback=initMap"></script>
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtDFC3VLvbxSFJ-8tAWIFhVipSdH81Eio&callback=startApp"></script>
   </body>
 </html>
