--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
           heap.load("3104011322");
     </script>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-243631-7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-243631-7');
+    </script>
   </head>
   <body>
     <div id="floating-panel">
