--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 
       gtag('config', 'UA-243631-7');
     </script>
+    <!-- AdSense -->
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-4402610208555767",
+        enable_page_level_ads: true
+      });
+    </script>
   </head>
   <body>
     <div id="floating-panel">
