--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta name="Description" content="Know your commute time! Enter start and finish location and see travel duration at different times of the day.">
     <meta charset="utf-8">
     <title>Commute Time Calculator</title>
     <link rel="stylesheet" type="text/css"
